--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,32 +1,163 @@
-@import url('https://fonts.googleapis.com/css2?family=Domine:wght@700&family=Montserrat:wght@400;700&family=Open+Sans:wght@400;700&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Domine:wght@700&family=Montserrat:wght@400;700&family=Open+Sans:wght@400;700&display=swap");
+@font-face {
+  font-family: monserrat-bold;
+  src: url(https://github.com/Nean-As/protjec/blob/main/montserratbold.woff);
+  font-weight: 400;
+  font-style: normal;
+}
 
-body{
-  min-width: 1370px;
+@font-face {
+  font-family: monserrat-regular;
+  src: url(https://github.com/Nean-As/protjec/blob/main/montserratlight.ttf?raw=true);
+  font-weight: 400;
+  font-style: normal;
+}
+
+body {
   margin: 0;
   padding: 0;
 }
 
-.header {
-  width: 100%;
-  height: 1057px;
-  background-image: url("https://github.com/Nean-As/protjec/blob/main/Photo.jpg?raw=true");
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-color: #c7cccf;
+@media (max-width: 640px) {
+  .container, .footer, 
+  .header-container, .header-titles {
+    padding-left: 15px;
+    padding-right: 15px;
+  }
+  .header {
+    width: 100%;
+    height: 1057px;
+  }
+
+  .menu-list {
+    display: none;
+  }
+
+  .burger_button {
+    display: flex;
+    position: relative;
+    width: 30px;
+    height: 25px;
+    border: none;
+    background-color: transparent;
+    cursor: pointer;
+    padding: 0;
+    margin-top: 10px;
+    order: 2;
+  }
+
+  .burger_button-label {
+    position: absolute;
+    background-color: #263742;
+    border-radius: 5px;
+    width: 100%;
+    height: 4px;
+    left: 0;
+    top: 10px;
+    text-indent: -9999px;
+  }
+
+  .burger_button::after,
+  .burger_button::before {
+    content: " ";
+    position: absolute;
+    background-color: #263742;
+    border-radius: 5px;
+    width: 100%;
+    height: 4px;
+    left: 0;
+  }
+  .burger_button::before {
+    top: 0;
+  }
+  .burger_button::after {
+    bottom: 0;
+  }
+
+  .header-titles {
+  margin-top: 150px;
+  width: 450px;
 }
 
-.header-menu {
+.header-title {
+  font-size: 30px;
+}
+
+.header-title-little {
+  font-size: 16px;
+}
+
+.post-lists {
+  flex-wrap: wrap;
+}
+
+.our-teams {
+  flex-wrap: wrap;
+}
+}
+
+@media (min-width: 1200px) {
+  .header {
+    width: 100%;
+    height: 1057px;
+  }
+
+  .header-container {
+    width: 940px;
+  }
+
+  .header-menu {
+    display: flex;
+    justify-content: center;
+    padding-left: 15px;
+    padding-right: 15px;
+  }
+
+  .burger_button {
+    display: none;
+  }
+
+  .header-titles {
+  margin-top: 307px;
+  margin-left: 228px;
+  width: 509px;
+}
+
+.header-title {
+  font-size: 47px;
+}
+
+.header-title-little {
+  font-size: 20px;
+}
+
+.container {
+  width: 940px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.portfolio {
   display: flex;
-  justify-content: center;
+}
+
+.footer {
+  width: 940px;
+  margin-left: auto;
+  margin-right: auto;
+}
+}
+
+.header {
+  background-image: url("https://github.com/Nean-As/protjec/blob/main/Photo.jpg?raw=true");
+  background-repeat: no-repeat;
+  background-color: #c7cccf;
 }
 
 .header-container {
   box-sizing: border-box;
   display: flex;
-  width: 940px;
   justify-content: space-between;
-  padding-left: 15px;
-  padding-right: 15px;
 }
 
 .header-logo {
@@ -34,12 +165,12 @@ body{
   height: 74px;
   background-color: #fa5c65;
   border-radius: 0 0 10px 10px;
-  text-align: center; 
+  text-align: center;
 }
 
 .logo {
   display: block;
-  font-family: 'Domine', serif;
+  font-family: "Domine", serif;
   margin-top: 40px;
   font-size: 20px;
   color: #ffffff;
@@ -81,20 +212,6 @@ body{
   background-color: #fa5c65;
 }
 
-@font-face {
-  font-family: monserrat-bold;
-  src: url(https://github.com/Nean-As/protjec/blob/main/montserratbold.woff);
-  font-weight: 400;
-  font-style: normal;
-}
-
-@font-face {
-  font-family: monserrat-regular;
-  src: url(https://github.com/Nean-As/protjec/blob/main/montserratlight.ttf?raw=true);
-  font-weight: 400;
-  font-style: normal;
-}
-
 .socials {
   display: flex;
 }
@@ -104,14 +221,13 @@ body{
 }
 
 .socials-link-twitter {
-  fill:#fa5c65;
+  fill: #fa5c65;
   display: block;
   width: 20px;
   height: 16px;
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
-  
 }
 
 .socials-link-facebook {
@@ -121,17 +237,16 @@ body{
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
-  
 }
 
 .socials-link-twitter {
   background-image: url("../SVG/004-twitter.svg");
-  color:#fa5c65;
+  color: #fa5c65;
 }
 
 .socials-link-facebook {
   background-image: url("../SVG/002-facebook-logo.svg");
-  fill:#fa5c65;
+  fill: #fa5c65;
 }
 
 .socials-link-text {
@@ -141,14 +256,7 @@ body{
   position: absolute;
 }
 
-.header-titles {
-  margin-top: 307px;
-  margin-left: 228px;
-  width: 509px;
-}
-
 .header-title {
-  font-size: 47px;
   font-family: Arial;
   text-transform: uppercase;
   color: #263742;
@@ -160,8 +268,7 @@ body{
 }
 
 .header-title-little {
-  font-size: 20px;
-  font-family: 'Open Sans', sans-serif;
+  font-family: "Open Sans", sans-serif;
   color: #263742;
 }
 
@@ -175,14 +282,10 @@ body{
   border: none;
   color: white;
   background-color: #fa5c65;
-  
 }
 
 .container {
-  width: 940px;
   margin-top: 80px;
-  margin-left: auto;
-  margin-right: auto;
   margin-bottom: 60px;
 }
 
@@ -191,9 +294,9 @@ body{
 }
 
 .post-list {
+  width: 300px;
   padding-left: 15px;
   padding-right: 15px;
-  width: 300px;
 }
 
 .post-title {
@@ -224,15 +327,12 @@ body{
 }
 .s {
   width: 12px;
-  height: 9px; 
+  height: 9px;
   background-image: url("https://github.com/Nean-As/protjec/blob/main/Arrow.png?raw=true");
   background-repeat: no-repeat;
   background-position: right;
 }
 
-.portfolio {
-  display: flex;
-}
 
 .portfolio-list {
   width: 380px;
@@ -294,7 +394,6 @@ body{
 .team {
   width: 290px;
   padding-right: 20px;
-  
 }
 .team-info {
   width: 145px;
@@ -315,7 +414,6 @@ body{
   color: #fa5c65;
   margin-top: 5px;
   margin-bottom: 5px;
-  
 }
 
 .team-text {
@@ -332,9 +430,6 @@ p {
 .footer {
   display: flex;
   justify-content: space-between;
-  width: 940px;
   border-top: 1px solid #b9c0c6;
   padding: 3px;
-  margin-left: auto;
-  margin-right: auto;
 }
