--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,32 +1,21 @@
-@import url("https://fonts.googleapis.com/css2?family=Domine:wght@700&family=Montserrat:wght@400;700&family=Open+Sans:wght@400;700&display=swap");
-@font-face {
-  font-family: monserrat-bold;
-  src: url(https://github.com/Nean-As/protjec/blob/main/montserratbold.woff);
-  font-weight: 400;
-  font-style: normal;
-}
-
-@font-face {
-  font-family: monserrat-regular;
-  src: url(https://github.com/Nean-As/protjec/blob/main/montserratlight.ttf?raw=true);
-  font-weight: 400;
-  font-style: normal;
-}
-
 body {
   margin: 0;
   padding: 0;
 }
 
 @media (max-width: 640px) {
-  .container, .footer, 
-  .header-container, .header-titles {
+  .container,
+  .footer,
+  .header-container,
+  .header-titles {
     padding-left: 15px;
     padding-right: 15px;
+    box-sizing: border-box;
   }
   .header {
     width: 100%;
-    height: 1057px;
+    background-size: cover;
+    padding-bottom: 50px;
   }
 
   .menu-list {
@@ -42,13 +31,13 @@ body {
     background-color: transparent;
     cursor: pointer;
     padding: 0;
-    margin-top: 10px;
+    margin-top: 25px;
     order: 2;
   }
 
   .burger_button-label {
     position: absolute;
-    background-color: #263742;
+    background-color: #fa5c65;
     border-radius: 5px;
     width: 100%;
     height: 4px;
@@ -61,7 +50,7 @@ body {
   .burger_button::before {
     content: " ";
     position: absolute;
-    background-color: #263742;
+    background-color: #fa5c65;
     border-radius: 5px;
     width: 100%;
     height: 4px;
@@ -75,31 +64,41 @@ body {
   }
 
   .header-titles {
-  margin-top: 150px;
-  width: 450px;
+    margin-top: 150px;
+    width: 300px;
+  }
+
+  .header-title {
+    font-size: 30px;
+  }
+
+  .header-title-little {
+    font-size: 16px;
+  }
+
+  .container {
+    margin-top: 10px;
+    margin-bottom: 70px;
+  }
+
+  .portfol-img {
+    width: 100%;
+  }
+
+  .post-lists {
+    flex-wrap: wrap;
+  }
+
+  .our-teams {
+    flex-wrap: wrap;
+  }
 }
 
-.header-title {
-  font-size: 30px;
-}
-
-.header-title-little {
-  font-size: 16px;
-}
-
-.post-lists {
-  flex-wrap: wrap;
-}
-
-.our-teams {
-  flex-wrap: wrap;
-}
-}
-
-@media (min-width: 1200px) {
+@media (min-width: 641px) {
   .header {
     width: 100%;
     height: 1057px;
+    background-size: cover;
   }
 
   .header-container {
@@ -109,8 +108,6 @@ body {
   .header-menu {
     display: flex;
     justify-content: center;
-    padding-left: 15px;
-    padding-right: 15px;
   }
 
   .burger_button {
@@ -118,46 +115,65 @@ body {
   }
 
   .header-titles {
-  margin-top: 307px;
-  margin-left: 228px;
-  width: 509px;
-}
+    display: flex;
+    justify-content: center;
+    margin-top: 307px;
+  }
 
-.header-title {
-  font-size: 47px;
-}
+  .header-title-container {
+    width: 940px;
+    box-sizing: border-box;
+    padding-left: 15px;
+    padding-right: 15px;
+  }
 
-.header-title-little {
-  font-size: 20px;
-}
+  .container {
+    margin-top: 80px;
+    margin-bottom: 60px;
+  }
 
-.container {
-  width: 940px;
-  margin-left: auto;
-  margin-right: auto;
-}
+  .title-container {
+    width: 509px;
+  }
 
-.portfolio {
-  display: flex;
-}
+  .header-title {
+    font-size: 47px;
+  }
 
-.footer {
-  width: 940px;
-  margin-left: auto;
-  margin-right: auto;
-}
+  .header-title-little {
+    font-size: 20px;
+  }
+
+  .container {
+    width: 940px;
+    margin-left: auto;
+    margin-right: auto;
+  }
+
+  .portfolio {
+    display: flex;
+  }
+
+  .footer {
+    width: 940px;
+    margin-left: auto;
+    margin-right: auto;
+  }
 }
 
 .header {
   background-image: url("https://github.com/Nean-As/protjec/blob/main/Photo.jpg?raw=true");
   background-repeat: no-repeat;
   background-color: #c7cccf;
+  background-size: cover;
 }
 
 .header-container {
   box-sizing: border-box;
   display: flex;
   justify-content: space-between;
+  padding-left: 15px;
+  padding-right: 15px;
 }
 
 .header-logo {
@@ -172,12 +188,12 @@ body {
   display: block;
   font-family: "Domine", serif;
   margin-top: 40px;
-  font-size: 20px;
+  font-size: 25px;
   color: #ffffff;
 }
 
 .sup {
-  font-size: 5px;
+  font-size: 15px;
   color: #263742;
   vertical-align: sub;
 }
@@ -275,7 +291,7 @@ body {
 .submit {
   text-transform: uppercase;
   font-size: 14px;
-  font-family: monserrat-bold;
+  font-family: Arial, Helvetica, sans-serif;
   margin-top: 18px;
   width: 150px;
   height: 48px;
@@ -284,9 +300,8 @@ body {
   background-color: #fa5c65;
 }
 
-.container {
-  margin-top: 80px;
-  margin-bottom: 60px;
+.submit:hover + .header {
+  background-image: url(../SVG/);
 }
 
 .post-lists {
@@ -325,6 +340,7 @@ body {
   background-repeat: no-repeat;
   background-position: 50px;
 }
+
 .s {
   width: 12px;
   height: 9px;
@@ -332,7 +348,6 @@ body {
   background-repeat: no-repeat;
   background-position: right;
 }
-
 
 .portfolio-list {
   width: 380px;
@@ -432,4 +447,6 @@ p {
   justify-content: space-between;
   border-top: 1px solid #b9c0c6;
   padding: 3px;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 10px;
 }
